--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,6 @@
 .header {
-  height: 90vh;
+  position: relative;
+  height: 100vh;
   background: url("http://www.miero.co.kr/img/main/banner1.jpg") center/cover
     no-repeat;
 }
@@ -8,14 +9,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 50px;
+  padding: 30px 55px;
 }
 
 .logo {
-  width: 50%;
+  width: 40%;
   height: auto;
 }
 
 .list {
   display: flex;
+}
+
+
+@keyframes dd {
+  0% {
+    width:20px;
+  }
+  100% {
+    width:20px;
+  }
 }
